# rollforge

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  vcpkg-configuration.json  vcpkg.json
.github/workflows/: wheels.yml
bindings/: bindings.cpp
docs/: api_reference.md
include/rollforge/: action_engine.h  entity.h  mechanics.h  session_state.h
src/: action_engine.cpp  entity.cpp  mechanics.cpp  session_state.cpp
tests/: CMakeLists.txt  test_action_engine.cpp  test_entity.cpp  test_mechanics.cpp  test_session_state.cpp
